--- a/frontEnd/src/pages/displayTasks/displayTasks.css
+++ b/frontEnd/src/pages/displayTasks/displayTasks.css
@@ -16,3 +16,15 @@
 	padding: 10px;
 	border: 1px solid;
 }
+.formContainer
+{
+	display: flex;
+	gap: 10px;
+	justify-content: start;
+}
+.task
+{
+	margin:10px;
+	padding:10px;
+	border:1px solid;
+}
