--- a/frontEnd/src/pages/displayTasks/displayTasks.css
+++ b/frontEnd/src/pages/displayTasks/displayTasks.css
@@ -28,3 +28,9 @@
 	padding:10px;
 	border:1px solid;
 }
+.HeadingSpan
+{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
