--- a/frontEnd/src/pages/displayTasks/displayTasks.css
+++ b/frontEnd/src/pages/displayTasks/displayTasks.css
@@ -1,7 +1,6 @@
 .container{
 	margin: 20px 100px;
 	padding:10px;
-	border: 1px solid;
 	display: flex;
 	flex-direction:column;
 }
@@ -14,7 +13,8 @@
 .blocks{
 	width:100%;
 	padding: 10px;
-	border: 1px solid;
+	display: flex;
+	justify-content:space-around;
 }
 .formContainer
 {
@@ -26,11 +26,23 @@
 {
 	margin:10px;
 	padding:10px;
-	border:1px solid;
+	border: 1px solid;
 }
+.taskCont
+{
+	display: flex;
+	width:50%;
+}
+
 .HeadingSpan
 {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+}
+.new
+{
+	width:25%;
+	margin-top: 100px;
+	align-self: center;
 }
